@@ -1,7 +1,7 @@
 ############################################################################
 # arch/arm/src/lpc17xx/Make.defs
 #
-#   Copyright (C) 2010 Gregory Nutt. All rights reserved.
+#   Copyright (C) 2010-2011 Gregory Nutt. All rights reserved.
 #   Author: Gregory Nutt <spudmonkey@racsa.co.cr>
 #
 # Redistribution and use in source and binary forms, with or without
@@ -41,7 +41,7 @@ HEAD_ASRC	= lpc17_vectors.S
 
 CMN_ASRCS	= up_saveusercontext.S up_fullcontextrestore.S up_switchcontext.S
 CMN_CSRCS	= up_assert.c up_blocktask.c up_copystate.c up_createstack.c \
-		  up_mdelay.c up_udelay.c up_exit.c up_idle.c up_initialize.c \
+		  up_mdelay.c up_udelay.c up_exit.c up_initialize.c \
 		  up_initialstate.c up_interruptcontext.c up_modifyreg8.c \
 		  up_modifyreg16.c up_modifyreg32.c up_releasepending.c \
 		  up_releasestack.c up_reprioritizertr.c up_schedulesigaction.c \
@@ -52,8 +52,8 @@ CMN_CSRCS	= up_assert.c up_blocktask.c up_copystate.c up_createstack.c \
 
 CHIP_ASRCS	=
 CHIP_CSRCS	= lpc17_allocateheap.c lpc17_clockconfig.c lpc17_clrpend.c \
-		  lpc17_gpio.c lpc17_irq.c lpc17_lowputc.c lpc17_serial.c \
-		  lpc17_spi.c lpc17_ssp.c lpc17_start.c lpc17_timerisr.c
+		  lpc17_gpio.c lpc17_idle.c lpc17_irq.c lpc17_lowputc.c \
+		  lpc17_serial.c lpc17_spi.c lpc17_ssp.c lpc17_start.c lpc17_timerisr.c
 
 # Configuration-dependent LPC17xx files
 
